# myecs

./: CMakeLists.txt
samples/: CMakeLists.txt  samples.cpp  samples.h
src/: ComponentManager.h  ComponentSet.h  Database.cpp  Database.h  DenseComponentSet.h  Entity.h  myecs.cpp  myecs.h
src/utils/: StructureOfArrays.h
